--- a/app/styles/input.css
+++ b/app/styles/input.css
@@ -7,10 +7,6 @@
 
 /* ------- SHARED BETWEEN INPUT ELEMENTS -------- */
 
-:root {
-    --input-xpadding: 1em;
-}
-
 input,
 textarea,
 button,
